--- a/blockly-android/src/main/assets/blockly/style.css
+++ b/blockly-android/src/main/assets/blockly/style.css
@@ -59,3 +59,16 @@ body,
   font-size: 25px;
   color: white;
 }
+
+.tabs-level li a img {
+  filter: opacity(0.3);
+  transition: all .2s ease-out;
+  width: 26px;
+  height: 26px;
+  padding: 12px;
+}
+
+.tabs-level li.tab-active a img {
+  filter: opacity(1.0);
+  transform: scale(1.1);
+}
